<resources>
    <string name="app_name">woundtissueclassification</string>

    <string name="please_calibrate_camera">Calibrate your device using one of the listed coins so we can measure wound size correctly.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_permission_description">Camera permission is required to run this application.</string>
    <string name="request_permission">Request Permission</string>
    <string name="open_app_settings">Open App Settings</string>

    <string name="back_button_desc">Navigate back</string>
    <string name="help_button_desc">Get help</string>
    <string name="flash_button_desc">Toggle flash</string>
    <string name="capture_button_desc">Take photo</string>
    <string name="move_arrow_desc">Movement indicator</string>
    <string name="focus_indicator_desc">Focus area indicator</string>


    <!-- Instruction Strings -->
    <string name="ideal_conditions_message">Wait for the camera button to turn green for ideal imaging conditions.</string>
    <string name="move_instruction">Move to different distance</string>
    <string name="move_away">Move away</string>
    <string name="move_closer">Move closer</string>
    <string name="capture_anyway">Focus manually anyway</string>

    <!-- Upload Progress Dialog Strings -->
    <string name="uploading_image">Uploading Image</string>
    <string name="uploading_zero_percent">Uploading... 0%</string>
    <string name="uploading_progress_format">Uploading... %d%%</string>
    <string name="uploading_finalizing">Finalizing...</string>
    <string name="uploading_info_text">Please wait while your image is being uploaded</string>

    <!-- Error Messages -->
    <string name="error_camera_unavailable">Camera is not available. Please try again later.</string>


    <!-- Button Labels -->
    <string name="btn_retry">Retry</string>
    <string name="btn_ok">OK</string>
    <string name="btn_redraw_boundary">Lasso/Reprocess</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_edit_markings">Adjust Wound Boundary</string>

    <!-- Accessibility -->
    <string name="content_desc_progress_indicator">Progress indicator</string>
</resources>